create 'about us' section

--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -78,7 +78,29 @@
     </div>
   </header>
 
-  
+  <div class="about section">
+    <div class="section__title">
+      <h1 class="section__header">about us</h1>
+      <p class="section__subheader">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+    <div class="about-content">
+      <div class="about-content__img">
+        <img src="img/about.png" alt="">
+      </div>
+      <div class="about-content__text">
+        <h2 class="about-content__title">What is Oxxo Responsive Theme?</h2>
+        <div class="about-content__description">
+          <p class="about-content__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et.</p>
+          <p class="about-content__paragraph">Accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue.</p>
+          <p class="about-content__paragraph">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+        </div>
+        <div class="about-content__buttons">
+          <a href="#" class="about-btn btn">meet us now</a>
+          <a href="#" class="about-btn btn">contact us</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/main.js" charset="utf-8"></script>
