--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -6,7 +6,7 @@
   <title>Oxxo</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
 </head>
 
 <body>
@@ -97,6 +97,250 @@
         <div class="about-content__buttons">
           <a href="#" class="about-btn btn">meet us now</a>
           <a href="#" class="about-btn btn">contact us</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="amazing section">
+    <div class="section__title">
+      <h1 class="section__header">we are amazing. yes we are.</h1>
+      <p class="section__subheader">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+    <div class="amazing-content">
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-desktop"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">responsive layout</h3>
+          <p class="amazing-content__subheader">Our theme has responsive layout, coded with Boostrap 3. Available for any device.</p>
+        </div>
+      </div>
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-magic"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">magical features</h3>
+          <p class="amazing-content__subheader">Our template has very nice features. If you want to know, just Buy It!</p>
+        </div>
+      </div>
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-flask"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">power of design</h3>
+          <p class="amazing-content__subheader">Design is the most important part of our theme and it rocks!</p>
+        </div>
+      </div>
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-cloud"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">creating the simple</h3>
+          <p class="amazing-content__subheader">Creating the simple is not that easy that it seems. We are doing this.</p>
+        </div>
+      </div>
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-paperclip"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">connectivity</h3>
+          <p class="amazing-content__subheader">Change every single feature in this template like you want.</p>
+        </div>
+      </div>
+      <div class="amazing-content__item">
+        <i class="amazing-content__icon fas fa-microphone"></i>
+        <div class="amazing-content__text">
+          <h3 class="amazing-content__header">just action</h3>
+          <p class="amazing-content__subheader">Just download our theme and start making something in easy way.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="team section">
+    <div class="section__title">
+      <h1 class="section__header">we are a team.</h1>
+      <p class="section__subheader">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+    <div class="team__list">
+      <div class="team-item">
+        <img src="img/team1.png" alt="" class="team-item__photo">
+        <h3 class="team-item__name">Jenniffer Doe <span class="team-item__post">Web Designer</span></h3>
+        <p class="team-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonu nibh euismod lorem ipsum dolor.</p>
+        <ul class="team-item__social">
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-facebook-f"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-twitter"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-tumblr"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-linkedin-in"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="far fa-envelope"></i></a></li>
+        </ul>
+      </div>
+      <div class="team-item">
+        <img src="img/team2.png" alt="" class="team-item__photo">
+        <h3 class="team-item__name">John Doe <span class="team-item__post">General Manager</span></h3>
+        <p class="team-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonu nibh euismod lorem ipsum dolor.</p>
+        <ul class="team-item__social">
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-facebook-f"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-twitter"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-tumblr"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-linkedin-in"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="far fa-envelope"></i></a></li>
+        </ul>
+      </div>
+      <div class="team-item">
+        <img src="img/team3.png" alt="" class="team-item__photo">
+        <h3 class="team-item__name">Andrea Doe <span class="team-item__post">Graphic Designer</span></h3>
+        <p class="team-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonu nibh euismod lorem ipsum dolor.</p>
+        <ul class="team-item__social">
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-facebook-f"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-twitter"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-tumblr"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-linkedin-in"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="far fa-envelope"></i></a></li>
+        </ul>
+      </div>
+      <div class="team-item">
+        <img src="img/team4.png" alt="" class="team-item__photo">
+        <h3 class="team-item__name">Michael Doe <span class="team-item__post">CEO</span></h3>
+        <p class="team-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonu nibh euismod lorem ipsum dolor.</p>
+        <ul class="team-item__social">
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-facebook-f"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-twitter"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-tumblr"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="fab fa-linkedin-in"></i></a></li>
+          <li class="team-item__scnetw"><a href="#" class="team-item__link"><i class="far fa-envelope"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio section">
+    <div class="section__title">
+      <h1 class="section__header">see our work.</h1>
+      <p class="section__subheader">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+    <div class="portfolio-content">
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio1.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">A Red Car</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio2.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">A Bottle of Vine</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio3.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">Sofa</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio4.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">Chair</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio5.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">Cocktail</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio6.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">Another Cocktail</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio7.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">Bicycle</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
+        </div>
+      </div>
+
+      <div class="portfolio-content__item">
+        <img src="img/portfolio/portfolio8.jpeg" alt="" class="portfolio-content__img">
+        <div class="portfolio-content__icons">
+          <div class="icon-container">
+            <i class="fas fa-search-plus"></i>
+          </div>
+          <div class="icon-container">
+            <i class="fas fa-external-link-alt"></i>
+          </div>
+        </div>
+        <div class="portfolio-content__description">
+          <h2 class="portfolio-content__title">A Bottle of Vine</h2>
+          <h3 class="portfolio-content__kind">Photography</h3>
         </div>
       </div>
     </div>
