added 2 new sections

--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -346,6 +346,29 @@
     </div>
   </div>
 
+  <div class="buy section">
+    <div class="section__title">
+      <h1 class="section__header">buy oxxo now!</h1>
+      <p class="section__subheader">We are offering you a lot of <span>features</span>. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</p>
+    </div>
+    <div class="buy-controls">
+      <a href="#" class="buy-controls__btn btn"><i class="fas fa-shopping-cart"></i> buy now</a>
+      <a href="#" class="buy-controls__btn btn"><i class="far fa-envelope"></i> contact us</a>
+    </div>
+  </div>
+
+  <div class="clients section">
+    <div class="section__title">
+      <h1 class="section__header">what our clients say?</h1>
+    </div>
+    <div class="clients-content">
+      <h3 class="clients-content__title">they are awesome</h3>
+      <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+      <p class="clients-content__author">Johnatan Doe <span class="clients-content__corp">lorem imsum inc</span></p>
+    </div>
+
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/main.js" charset="utf-8"></script>
 </body>
