--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -90,7 +90,8 @@
       <div class="about-content__text">
         <h2 class="about-content__title">What is Oxxo Responsive Theme?</h2>
         <div class="about-content__description">
-          <p class="about-content__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et.</p>
+          <p class="about-content__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et.</p>
           <p class="about-content__paragraph">Accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue.</p>
           <p class="about-content__paragraph">Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
         </div>
@@ -363,10 +364,115 @@
     </div>
     <div class="clients-content">
       <h3 class="clients-content__title">they are awesome</h3>
-      <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+      <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+        ex ea commodo consequat.</p>
       <p class="clients-content__author">Johnatan Doe <span class="clients-content__corp">lorem imsum inc</span></p>
     </div>
 
+  </div>
+
+  <div class="tooltip-clients">
+    <div class="tooltip-clients__content">
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo1.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo2.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo3.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo4.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo5.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+      <div class="tooltip-clients__item">
+        <img src="img/clients/logo6.png" alt="">
+        <div class="tooltip">
+          <span class="tooltiptext">
+            <span class="tooltiptext__company">Graphicriver Company</span>
+            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+            <span class="tooltiptext__site">www.graphicriver.net</span>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="howwedo section">
+    <div class="section__title">
+      <h1 class="section__header">see our work.</h1>
+      <p class="section__subheader">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+    <div class="howwedo-content">
+      <img src="img/pc_view.png" class="howwedo-content__picture"></img>
+      <div class="howwedo-content__list">
+        <div class="howwedo-content__item">
+          <div class="howwedo-icon-bg">
+            <i class="howwedo-content__icon fas fa-desktop"></i>
+          </div>
+          <div class="howwedo-content__container">
+            <h3 class="howwedo-content__title">Responsive Layout</h3>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+          </div>
+        </div>
+        <div class="howwedo-content__item">
+          <div class="howwedo-icon-bg">
+            <i class="howwedo-content__icon fas fa-magic"></i>
+          </div>
+          <div class="howwedo-content__container">
+            <h3 class="howwedo-content__title">Fully Customizable</h3>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+          </div>
+        </div>
+        <div class="howwedo-content__item">
+          <div class="howwedo-icon-bg">
+            <i class="howwedo-content__icon fas fa-bolt"></i>
+          </div>
+          <div class="howwedo-content__container">
+            <h3 class="howwedo-content__title">Powerful. Impressive.</h3>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
