added 2 new sections - 'contact us' and footer

--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -378,8 +378,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -388,8 +388,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -398,8 +398,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -408,8 +408,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -418,8 +418,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -428,8 +428,8 @@
         <div class="tooltip">
           <span class="tooltiptext">
             <span class="tooltiptext__company">Graphicriver Company</span>
-            <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
-            <span class="tooltiptext__site">www.graphicriver.net</span>
+          <span class="tooltiptext__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, magnam.</span>
+          <span class="tooltiptext__site">www.graphicriver.net</span>
           </span>
         </div>
       </div>
@@ -450,7 +450,8 @@
           </div>
           <div class="howwedo-content__container">
             <h3 class="howwedo-content__title">Responsive Layout</h3>
-            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+              aliquip ex ea commodo consequat</p>
           </div>
         </div>
         <div class="howwedo-content__item">
@@ -459,7 +460,8 @@
           </div>
           <div class="howwedo-content__container">
             <h3 class="howwedo-content__title">Fully Customizable</h3>
-            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+              aliquip ex ea commodo consequat</p>
           </div>
         </div>
         <div class="howwedo-content__item">
@@ -468,12 +470,136 @@
           </div>
           <div class="howwedo-content__container">
             <h3 class="howwedo-content__title">Powerful. Impressive.</h3>
-            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat</p>
+            <p class="howwedo-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+              aliquip ex ea commodo consequat</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="contacts section">
+    <div class="contacts-content">
+      <div class="contacts-content__item">
+        <h3 class="contacts-content__title"><i class="fas fa-map-marker-alt"></i> Contact Info</h3>
+        <div class="contact-info">
+          <p class="contact-info__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, repellat.</p>
+          <div class="contact-info__adress">
+            <span>Adress</span>
+            <span class="contact-info__street">13th Street, No:25, Fatih / ISTANBUL</span>
+          </div>
+          <div class="contact-info__phone">
+            <span>Phone</span>
+            <span class="contact-info__number">+0 212 555 44 55 - +90 212 444 33 22</span>
+          </div>
+          <div class="contact-info__mail">
+            <span>Mail</span>
+            <span class="contact-info__mailadr">+0 212 555 44 55 - +90 212 444 33 22</span>
+          </div>
+          <ul class="contact-info__social">
+            <li class="contact-info__icon"><a href="#" class="contact-info__link"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="contact-info__icon"><a href="#" class="contact-info__link"><i class="fab fa-twitter"></i></a></li>
+            <li class="contact-info__icon"><a href="#" class="contact-info__link"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="contact-info__icon"><a href="#" class="contact-info__link"><i class="fab fa-dribbble"></i></a></li>
+            <li class="contact-info__icon"><a href="#" class="contact-info__link"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="contacts-content__item">
+        <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> Contact Info</h3>
+        <div class="latest-post__item">
+          <img class="latest-post__img" src="img/latest-post/post1.png" alt="">
+          <div class="latest-post__text">
+            <h3 class="latest-post__title">Lorem ipsum post title</h3>
+            <p class="latest-post__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="latest-post__date">8 April, 2014 - by Admin</p>
+          </div>
+        </div>
+        <div class="latest-post__item">
+          <img class="latest-post__img" src="img/latest-post/post2.png" alt="">
+          <div class="latest-post__text">
+            <h3 class="latest-post__title">Lorem ipsum post title</h3>
+            <p class="latest-post__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="latest-post__date">8 April, 2014 - by Admin</p>
+          </div>
+        </div>
+        <div class="latest-post__item">
+          <img class="latest-post__img" src="img/latest-post/post3.png" alt="">
+          <div class="latest-post__text">
+            <h3 class="latest-post__title">Lorem ipsum post title</h3>
+            <p class="latest-post__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="latest-post__date">8 April, 2014 - by Admin</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="contacts-content__item">
+        <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our service</h3>
+        <div class="service-content">
+          <div class="service-content__item">
+            <h3 class="service-content__title">web design & development<i class="fas fa-plus"></i></h3>
+            <div class="service-content__subtitle">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p>
+            </div>
+          </div>
+
+          <div class="service-content__item">
+            <h3 class="service-content__title">PHP & Wordpress Coding<i class="fas fa-plus"></i></h3>
+            <div class="service-content__subtitle">
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+            </div>
+          </div>
+
+          <div class="service-content__item">
+            <h3 class="service-content__title">HTML5 & CSS 3<i class="fas fa-plus"></i></h3>
+            <div class="service-content__subtitle">
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+            </div>
+          </div>
+
+          <div class="service-content__item">
+            <h3 class="service-content__title">Project Management<i class="fas fa-plus"></i></h3>
+            <div class="service-content__subtitle">
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contacts-content__item">
+        <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our service</h3>
+        <form action="" class="contacts-form">
+          <input type="text" class="contacts-form__input formcontrol" placeholder="Name">
+          <input type="text" class="contacts-form__input formcontrol" placeholder="E-Mail">
+          <textarea type="text" class="contacts-form__textarea formcontrol" placeholder="Message"></textarea>
+          <button type="button" name="button" class="contacts-form__button btn"><i class="far fa-envelope"></i> Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="footer-content">
+      <div class="left-part">
+        <div class="footer-logo">
+          <span class="footer-logo__title">OXX<span>O</span></span>
+          <span class="footer-logo__subtitle">responsive theme</span>
+        </div>
+        <div class="footer-content__copyright">
+          <p>2014 ® All Rights Reserved - OXXO Responsive Theme</p>
+        </div>
+      </div>
+      <div class="rigth-part">
+        <ul class="footer-menu">
+          <li class="footer-menu__item"><a href="#" class="footer-menu__link">buy this theme</a></li>
+          <li class="footer-menu__item"><a href="#" class="footer-menu__link">contact us</a></li>
+          <li class="footer-menu__item"><a href="#" class="footer-menu__link">FAQ</a></li>
+          <li class="footer-menu__item"><a href="#" class="footer-menu__link">who we are?</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/main.js" charset="utf-8"></script>
