Made this more adaptive

--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -71,6 +71,9 @@
         </li>
       </ul>
     </nav>
+    <div class="hamburger-menu">
+      <i class="fas fa-bars"></i>
+    </div>
     <div class="header-greeting">
       <span class="header-greeting__title">we are. oxo.</span>
       <span class="header-greeting__subtitle">web design<i class="fas fa-circle"></i><span>social media</span><i class="fas fa-circle"></i>graphics<i class="fas fa-circle"></i>start-up</span>
@@ -497,19 +500,19 @@
   <div class="contacts section">
     <div class="wrapper">
       <div class="contacts-content">
-        <div class="contacts-content__item">
+        <div class="contacts-content__item info">
           <h3 class="contacts-content__title"><i class="fas fa-map-marker-alt"></i> Contact Info</h3>
           <div class="contact-info">
             <p class="contact-info__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, repellat.</p>
-            <div class="contact-info__adress">
+            <div class="contact-info__adress contact-info__item">
               <span>Adress</span>
               <span class="contact-info__street">13th Street, No:25, Fatih / ISTANBUL</span>
             </div>
-            <div class="contact-info__phone">
+            <div class="contact-info__phone contact-info__item">
               <span>Phone</span>
               <span class="contact-info__number">+0 212 555 44 55 - +90 212 444 33 22</span>
             </div>
-            <div class="contact-info__mail">
+            <div class="contact-info__mail contact-info__item">
               <span>Mail</span>
               <span class="contact-info__mailadr">+0 212 555 44 55 - +90 212 444 33 22</span>
             </div>
@@ -523,8 +526,8 @@
           </div>
         </div>
 
-        <div class="contacts-content__item">
-          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> Contact Info</h3>
+        <div class="contacts-content__item posts">
+          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> latest post</h3>
           <div class="latest-post__item">
             <img class="latest-post__img" src="img/latest-post/post1.png" alt="">
             <div class="latest-post__text">
@@ -551,8 +554,8 @@
           </div>
         </div>
 
-        <div class="contacts-content__item">
-          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our service</h3>
+        <div class="contacts-content__item services">
+          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our services</h3>
           <div class="service-content">
             <div class="service-content__item">
               <h3 class="service-content__title">web design & development <span class="i-container"><i class="fas fa-plus"></i></span></h3>
@@ -584,8 +587,8 @@
           </div>
         </div>
 
-        <div class="contacts-content__item">
-          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our service</h3>
+        <div class="contacts-content__item form">
+          <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> contact form</h3>
           <form action="" class="contacts-form">
             <input type="text" class="contacts-form__input formcontrol" placeholder="Name">
             <input type="text" class="contacts-form__input formcontrol" placeholder="E-Mail">
