--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -10,27 +10,29 @@
 </head>
 
 <body>
+  <button class="backToTopBtn"><i class="fas fa-arrow-up"></i></button>
+
   <header class="header">
     <nav class="header__nav">
       <ul class="header-menu">
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">About us</a>
+          <a href="#about" class="header-menu__text">About us</a>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">Who we are?</a>
+          <a href="#amazing" class="header-menu__text">Who we are?</a>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">Portfolio</a>
+          <a href="#team" class="header-menu__text">Our team</a>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">Our team</a>
+          <a href="#portfolio" class="header-menu__text">Portfolio</a>
         </li>
         <li class="header-logo">
           <span class="header-logo__title">Oxxo</span>
           <span class="header-logo__subtitle">Responsive theme</span>
         </li>
         <li class="header-menu__item dropdown">
-          <a href="#" class="header-menu__text">Services</a>
+          <a href="#buy" class="header-menu__text">Services</a>
           <ul class="dropdown-content">
             <li class="dropdown-content__item"><a href="#" class="dropdown-content__text">Submenu title 1</a></li>
             <li class="dropdown-content__item submenu--open">
@@ -61,18 +63,30 @@
           </ul>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">Clients</a>
+          <a href="#clients" class="header-menu__text">Clients</a>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">How we do?</a>
+          <a href="#howwedo" class="header-menu__text">How we do?</a>
         </li>
         <li class="header-menu__item">
-          <a href="#" class="header-menu__text">Contact us</a>
+          <a href="#contacts" class="header-menu__text">Contact us</a>
         </li>
       </ul>
     </nav>
     <div class="hamburger-menu">
-      <i class="fas fa-bars"></i>
+      <div class="hamburger-menu__icon">
+        <i class="fas fa-bars"></i>
+      </div>
+      <ul class="hamburger-menu__list">
+        <li class="hamburger-menu__item"><a href="#about" class="hamburger-menu__link">about us</a></li>
+        <li class="hamburger-menu__item"><a href="#amazing" class="hamburger-menu__link">who we are?</a></li>
+        <li class="hamburger-menu__item"><a href="#team" class="hamburger-menu__link">our team</a></li>
+        <li class="hamburger-menu__item"><a href="#portfolio" class="hamburger-menu__link">portfolio</a></li>
+        <li class="hamburger-menu__item"><a href="#buy" class="hamburger-menu__link">services</a></li>
+        <li class="hamburger-menu__item"><a href="#clients" class="hamburger-menu__link">clients</a></li>
+        <li class="hamburger-menu__item"><a href="#howwedo" class="hamburger-menu__link">how we do?</a></li>
+        <li class="hamburger-menu__item"><a href="#contacts" class="hamburger-menu__link">contact us</a></li>
+      </ul>
     </div>
     <div class="header-greeting">
       <span class="header-greeting__title">we are. oxo.</span>
@@ -81,7 +95,7 @@
     </div>
   </header>
 
-  <div class="about section">
+  <div class="about section" id="about">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">about us</h1>
@@ -108,7 +122,7 @@
     </div>
   </div>
 
-  <div class="amazing section">
+  <div class="amazing section" id="amazing">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">we are amazing. yes we are.</h1>
@@ -161,7 +175,7 @@
     </div>
   </div>
 
-  <div class="team section">
+  <div class="team section" id="team">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">we are a team.</h1>
@@ -220,7 +234,7 @@
     </div>
   </div>
 
-  <div class="portfolio section">
+  <div class="portfolio section" id="portfolio">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">see our work.</h1>
@@ -358,7 +372,7 @@
     </div>
   </div>
 
-  <div class="buy section">
+  <div class="buy section" id="buy">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">buy oxxo now!</h1>
@@ -371,7 +385,7 @@
     </div>
   </div>
 
-  <div class="clients section">
+  <div class="clients section" id="clients">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">what our clients say?</h1>
@@ -453,7 +467,7 @@
     </div>
   </div>
 
-  <div class="howwedo section">
+  <div class="howwedo section" id="howwedo">
     <div class="wrapper">
       <div class="section__title">
         <h1 class="section__header">RESPONSIVE. POWERFUL.</h1>
@@ -497,7 +511,7 @@
     </div>
   </div>
 
-  <div class="contacts section">
+  <div class="contacts section" id="contacts">
     <div class="wrapper">
       <div class="contacts-content">
         <div class="contacts-content__item info">
@@ -558,30 +572,30 @@
           <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> our services</h3>
           <div class="service-content">
             <div class="service-content__item">
-              <h3 class="service-content__title">web design & development <span class="i-container"><i class="fas fa-plus"></i></span></h3>
-              <div class="service-content__subtitle">
+              <button class="service-content__title accordion">web design & development <span class="i-container"><i class="fas fa-plus"></i></span></button>
+              <div class="service-content__subtitle panel active">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p>
               </div>
             </div>
 
             <div class="service-content__item">
-              <h3 class="service-content__title">PHP & Wordpress Coding <span class="i-container"><i class="fas fa-plus"></i></span></h3>
-              <div class="service-content__subtitle">
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+              <button class="service-content__title accordion">PHP & Wordpress Coding <span class="i-container"><i class="fas fa-plus"></i></span></button>
+              <div class="service-content__subtitle panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p>
               </div>
             </div>
 
             <div class="service-content__item">
-              <h3 class="service-content__title">HTML5 & CSS 3 <span class="i-container"><i class="fas fa-plus"></i></span></h3>
-              <div class="service-content__subtitle">
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+              <button class="service-content__title accordion">HTML5 & CSS 3 <span class="i-container"><i class="fas fa-plus"></i></span></button>
+              <div class="service-content__subtitle panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p>
               </div>
             </div>
 
             <div class="service-content__item">
-              <h3 class="service-content__title">Project Management <span class="i-container"><i class="fas fa-plus"></i></span></h3>
-              <div class="service-content__subtitle">
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p> -->
+              <button class="service-content__title accordion">Project Management <span class="i-container"><i class="fas fa-plus"></i></span></button>
+              <div class="service-content__subtitle panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit cum hic quisquam omnis exercitationem. Consequuntur sed similique ad deleniti, ut.</p>
               </div>
             </div>
           </div>
