added testimonials slider, customized contact form

--- a/oxxo/index.html
+++ b/oxxo/index.html
@@ -108,7 +108,6 @@
         </div>
       </div>
     </div>
-
   </header>
 
   <div class="about section" id="about">
@@ -407,10 +406,28 @@
         <h1 class="section__header">what our clients say?</h1>
       </div>
       <div class="clients-content">
-        <h3 class="clients-content__title">they are awesome</h3>
-        <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
-          ex ea commodo consequat.</p>
-        <p class="clients-content__author">Johnatan Doe <span class="clients-content__corp">lorem imsum inc</span></p>
+        <div class="clients-slider">
+          <div class="clients-slider__item">
+            <h3 class="clients-content__title">they are awesome</h3>
+            <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+              ex ea commodo consequat.</p>
+            <p class="clients-content__author">Johnatan Doe <span class="clients-content__corp">lorem imsum inc</span></p>
+          </div>
+
+          <div class="clients-slider__item">
+            <h3 class="clients-content__title">they are awesome</h3>
+            <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+              ex ea commodo consequat.</p>
+            <p class="clients-content__author">Jenniffer Doe <span class="clients-content__corp">lorem imsum inc</span></p>
+          </div>
+
+          <div class="clients-slider__item">
+            <h3 class="clients-content__title">they are awesome</h3>
+            <p class="clients-content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+              ex ea commodo consequat.</p>
+            <p class="clients-content__author">Andrea Doe <span class="clients-content__corp">lorem imsum inc</span></p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -620,9 +637,9 @@
         <div class="contacts-content__item form">
           <h3 class="contacts-content__title"><i class="fas fa-align-right"></i> contact form</h3>
           <form action="" class="contacts-form">
-            <input type="text" class="contacts-form__input formcontrol" placeholder="Name">
-            <input type="text" class="contacts-form__input formcontrol" placeholder="E-Mail">
-            <textarea type="text" class="contacts-form__textarea formcontrol" placeholder="Message"></textarea>
+            <div class="contacts-form__item"><i class="fas fa-user"></i><input type="text" class="contacts-form__input formcontrol" placeholder="Name"></div>
+            <div class="contacts-form__item"><i class="far fa-envelope"></i><input type="text" class="contacts-form__input formcontrol" placeholder="E-Mail"></div>
+            <div class="contacts-form__item"><i class="fas fa-pencil-alt"></i><textarea type="text" class="contacts-form__textarea formcontrol message" placeholder="Message"></textarea></div>
             <button type="button" name="button" class="contacts-form__button btn"><i class="far fa-envelope"></i> Submit</button>
           </form>
         </div>
